test/sema/traits/path_component_chained_traits.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B {}

trait A<T> {
  fn foo(self: borrowed Self) {}
}

struct S {
  impl A<number> {
    fn foo(self: borrowed Self) {}
  }

  impl A<unit> {
    fn foo(self: borrowed Self) {}
  }
}

fn main() {
  let s = S{};

  // CHECK: [[# @LINE + 1]]:24: error: failed to find member 'B' in 'A<number>'
  @<S impl A<number>>::B;
}
